[package]
name = "furtherance-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
aes-gcm = "0.10"
argon2 = "0.5"
askama = { version = "0.12", features = ["serde-json"] }
base64 = "0.22"
bcrypt = "0.15"
blake3 = "1.5"
chrono = { version = "0.4", features = ["alloc", "serde"] }
jsonwebtoken = "9.3"
rand = "0.8"
rusqlite = { version = "0.32", features = [
    "bundled",
    "chrono",
    "uuid",
    "functions",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
