[package]
name = "furtherance-sync"
version = "0.1.0"
edition = "2021"

[features]
default = ["self-hosted"]
self-hosted = []
official = []

[profile.release]
lto = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
bcrypt = "0.15"
blake3 = "1.5"
handlebars = "6.2"
jsonwebtoken = "9.3"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }
time = { version = "0.3", features = [
    "serde",
    "formatting",
    "macros",
    "parsing",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "sync",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
